# cross-platform-bullet-hell

./: CMakeLists.txt  README.md
assets/characters/: demo.json
assets/mesh/: full_size.lua  rect_2d.lua  square.lua
assets/registry/: game.lua
assets/shader/: basic.lua  black_aura.lua  default.lua  green_aura.lua  red_aura.lua  transparent.lua
assets/shader/fragment/: basic.glsl  black_aura.glsl  default.glsl  green_aura.glsl  red_aura.glsl  transparent.glsl
assets/shader/vertex/: basic.glsl  character.glsl  default.glsl
assets/sprite/: bullets.lua  enemy.lua  game_vars.lua  player.lua  stage.lua
src/: config_constants.hpp  main.cpp
src/app/: app.cpp  app.hpp
src/assets_factory/: mesh_factory.cpp  mesh_factory.hpp  shader_factory.cpp  shader_factory.hpp  texture_factory.cpp
src/entity/: player_entity.hpp
src/frame/: frame_serializer.cpp  frame_serializer.hpp  frame_template.cpp  frame_template.hpp  frame_template_structs.hpp
src/game_server/: game_logic_constants.hpp  game_server.cpp  game_server.hpp
src/input_manager/: default_keymapping.hpp  input_manager.cpp  input_manager.hpp  input_snapshot.cpp  input_snapshot.hpp
src/logger/: logger.cpp
src/mesh/: mesh.cpp  mesh.hpp
src/packet_serializer/: frame_serializer.cpp  frame_serializer.hpp  game_serializer.cpp  greeting_serializer.cpp  greeting_serializer.hpp  header_serializer.cpp  input_serializer.cpp  input_serializer.hpp
src/packet_stream/: packet_stream.cpp  packet_stream.hpp
src/packet_template/: game.hpp  header.hpp  input.hpp  packet_template.cpp  packet_template.hpp
src/packet_template/frame/: frame.cpp  frame.hpp  frame_enums.hpp  frame_structs.hpp
src/packet_template/game/: game_enums.hpp  game_structs.hpp
src/packet_template/greeting/: greeting.hpp  greeting_enums.hpp  greeting_structs.hpp
src/render_resource_factory/: mesh_factory.cpp  mesh_factory.hpp  shader_factory.cpp  texture_factory.cpp  texture_factory.hpp
src/renderable_resolver/: renderable_resolver.cpp  renderable_resolver.hpp  resolver_boss.cpp  resolver_bullet.cpp  resolver_enemy.cpp  resolver_item.cpp  resolver_player.cpp  resolver_stage.cpp  sprite_tag.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/shader/: shader.cpp  shader.hpp
src/socket/: socket.cpp  socket.hpp
src/sprite/: sprite.hpp  sprite_loader.cpp  sprite_loader.hpp  sprite_tag.hpp
src/texture/: texture2d.cpp  texture2d.hpp
src/transformer/: transformer.cpp  transformer.hpp
src/uniform_composer/: uniform_composer.cpp
